# Ducking

./: .gitignore  CMakeLists.txt  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: guessing.c  main.c  writting.c
src/simple/: guessing.c  main.c
